@@ -1,6 +1,9 @@
 Giraph Change Log
 
 Release 0.2.0 - unreleased
+  GIRAPH-422: Setting the log level of the root logger to the same level
+  can cause issues in Hadoop. (aching)
+
   GIRAPH-415: Refactor / cleanup Hadoop Counters (nitay via majakabiljo)
 
   GIRAPH-413: Make building Facebook profile easier. (nitay via aching)
